<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Caribbean_Green"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_above="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/PlayerOneLayout"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/black_border">
            <TextView
                android:id="@+id/edtPlayerOneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_player1"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/Caribbean_Green"
                android:maxLines="1" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_x"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/txt_player1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/PlayerTwoLayout"
            android:layout_width="170dp"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/white_box">
            <TextView
                android:id="@+id/edtPlayerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_player2"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/Caribbean_Green"
                android:maxLines="1" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_o"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/txt_player2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="55dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/btn__game_des"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>
            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>
            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>
            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>
            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/white_box"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:contentDescription="@string/btn__game_des"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>